--- a/SMSTool/app/src/main/res/values/colors.xml
+++ b/SMSTool/app/src/main/res/values/colors.xml
@@ -3,4 +3,25 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+
+    <color name="actionbar_color">#21282C</color>
+    <color name="simpletooltip_background">@color/colorAccent</color>
+    <color name="simpletooltip_text">@android:color/primary_text_light</color>
+    <color name="simpletooltip_arrow">@color/colorAccent</color>
+    <color name="TitleFontColor">#DE000000</color>
+    <color name="TextFontColor">#8a000000</color>
+    <color name="text_black_87">#DE000000</color>
+    <color name="text_black_54">#8A000000</color>
+    <color name="text_black_30">#4D000000</color>
+
+    <color name="toolbar_bg">#00b4fe</color>
+    <color name="text_red_status">#ed4040</color>
+    <color name="text_amber_status">#f8b502</color>
+    <color name="text_green_status">#4bbc31</color>
+    <color name="register_red">#fe5e1e</color>
+
+    <color name="bg_cashout">#002433</color>
+    <color name="bg_no_order">#fafafa</color>
+    <color name="black_12">#1F000000</color>
 </resources>
