--- a/SMSTool/app/src/main/res/values/colors.xml
+++ b/SMSTool/app/src/main/res/values/colors.xml
@@ -5,17 +5,63 @@
     <color name="colorAccent">#FF4081</color>
 
 
-    <color name="actionbar_color">#21282C</color>
-    <color name="simpletooltip_background">@color/colorAccent</color>
-    <color name="simpletooltip_text">@android:color/primary_text_light</color>
-    <color name="simpletooltip_arrow">@color/colorAccent</color>
+    <color name="numColor">#87c249</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="black">#FF000000</color>
+    <color name="mainbuttonBG">#B9B9B9</color>
+    <color name="mainbuttonTC">#909090</color>
+    <color name="common_dark_bg_title">#202020</color>
+    <color name="background">#F9F7F8</color>
+    <color name="foot_txt_gray">#AEAEAE</color>
+    <color name="accent">#40C4FF</color>
+    <color name="dialogbuttonfontcolor">#00AAEF</color>
     <color name="TitleFontColor">#DE000000</color>
     <color name="TextFontColor">#8a000000</color>
+    <color name="TitleBarColor">#329FFF</color>
+    <color name="transparent_background">#00000000</color>
+    <color name="Assistancebackground">#F0000000</color>
+
+    <color name="background_gray1">#EBEBEB</color>
+    <color name="background_gray2">#E6E6E6</color>
+    <color name="background_gray3">#D4D4D4</color>
+    <color name="background_gray4">#EFEFF4</color>
+    <color name="line">#DDDDDD</color>
+    <color name="line_btn">#BBBBBB</color>
+    <color name="text_gray1">#777777</color>
+    <color name="text_gray2">#767676</color>
+    <color name="text_blue1">#1173CB</color>
+    <color name="text_blue2">#1173CA</color>
+    <color name="panel_black">#25272A</color>
+    <color name="btn_red">#D63F41</color>
+    <color name="btn_red_hover">#E8484B</color>
+    <color name="btn_blue">#0F73CB</color>
+    <color name="btn_blue_hover">#1E86E4</color>
+    <color name="btn_text">#FFFFFF</color>
+    <color name="btn_text_hover">#CCFFFFFF</color>
+
+    <color name="black_26">#42000000</color>
+    <color name="gray">#ffdadbdd</color>
+
+    <color name="toolbar_bg">#00b4fe</color>
+
+
+    <color name="gray_text">#b8b8b8</color>
+    <color name="blue_item_text">#01b4ff</color>
+    <color name="common_tv_black">#000000</color>
+    <color name="common_blue_main">#00a6df</color>
+    <color name="common_yellow_main">#ffd200</color>
+    <color name="common_blue_md70">#00b4ff</color>
+
+    <color name="bg_gray_avatar">#f5f5f5</color>
+    <color name="common_dark_bg_content">#242424</color>
+    <color name="common_tv_darkgray">#757782</color>
+    <color name="text_enabled">#FFFFFFFF</color>
+    <color name="text_disabled">#4DFFFFFF</color>
+
     <color name="text_black_87">#DE000000</color>
     <color name="text_black_54">#8A000000</color>
     <color name="text_black_30">#4D000000</color>
 
-    <color name="toolbar_bg">#00b4fe</color>
     <color name="text_red_status">#ed4040</color>
     <color name="text_amber_status">#f8b502</color>
     <color name="text_green_status">#4bbc31</color>
