--- a/SMSTool/app/src/main/res/values/dimens.xml
+++ b/SMSTool/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="item_spacing">8dp</dimen>
     <dimen name="list_item_margin_180">180dp</dimen>
     <dimen name="list_item_margin_140">140dp</dimen>
     <dimen name="list_item_margin_100">100dp</dimen>
