--- a/SMSTool/app/src/main/res/layout/activity_user_add.xml
+++ b/SMSTool/app/src/main/res/layout/activity_user_add.xml
@@ -5,16 +5,21 @@
     android:id="@+id/activity_user_add"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/item_spacing"
-    android:paddingRight="@dimen/item_spacing"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.systemteam.smstool.activity.UserAddActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
     <TableLayout
         android:id="@+id/tl_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/list_item_margin_8"
+        android:layout_marginRight="@dimen/list_item_margin_8"
+        android:layout_below="@id/toolbar"
         android:shrinkColumns="0"
         android:stretchColumns="1"
         android:collapseColumns="2"
