--- a/SMSTool/app/src/main/res/layout/activity_search_customer.xml
+++ b/SMSTool/app/src/main/res/layout/activity_search_customer.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.systemteam.smstool.activity.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    android:fitsSystemWindows="true">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
     <ListView
         android:id="@+id/lv_list"
         android:layout_width="match_parent"
