--- a/SMSTool/app/src/main/res/layout/app_bar_main.xml
+++ b/SMSTool/app/src/main/res/layout/app_bar_main.xml
@@ -30,6 +30,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:visibility="visible"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/ic_edit_white" />
 
 </android.support.design.widget.CoordinatorLayout>
