--- a/SMSTool/app/src/main/res/layout/content_main.xml
+++ b/SMSTool/app/src/main/res/layout/content_main.xml
@@ -5,10 +5,8 @@
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/list_item_margin_8"
+    android:paddingTop="@dimen/list_item_margin_8"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.systemteam.smstool.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
@@ -16,5 +14,6 @@
     <ListView
         android:id="@+id/lv_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:divider="@null"></ListView>
 </RelativeLayout>
