--- a/SMSTool/app/src/main/res/layout/item_customer_list.xml
+++ b/SMSTool/app/src/main/res/layout/item_customer_list.xml
@@ -2,64 +2,72 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/list_item_bg"
-    android:orientation="vertical"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:paddingBottom="6dp"
     android:paddingLeft="5dp"
     android:paddingTop="6dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@+id/visualizer"
+        android:layout_toRightOf="@+id/albumArt"
+        android:layout_weight="8"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/visualizer"
-            android:layout_toRightOf="@+id/albumArt"
-            android:orientation="vertical"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp">
+            android:ellipsize="end"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/tv_info"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:paddingTop="3dp"
-                android:singleLine="true"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="13sp" />
-
-
-        </LinearLayout>
-
-
-        <ImageView
-            android:id="@+id/popup_menu"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tv_info"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="8dp"
-            android:foregroundTint="#434343"
-            android:padding="5dp"
-            android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
-            android:theme="@style/Theme.AppCompat" />
+            android:ellipsize="end"
+            android:paddingTop="3dp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="13sp" />
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_send"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|left"
+        android:layout_weight="2"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/tv_recive"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|left"
+        android:layout_weight="2"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
+
+    <ImageView
+        android:id="@+id/popup_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="8dp"
+        android:foregroundTint="#434343"
+        android:padding="5dp"
+        android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
+        android:theme="@style/Theme.AppCompat" />
 
 </LinearLayout>
