--- a/SMSTool/app/src/main/res/layout/main.xml
+++ b/SMSTool/app/src/main/res/layout/main.xml
@@ -63,129 +63,99 @@
                 android:text="@string/to_dt" />
         </TableRow>
     </TableLayout>
-
-    <TableLayout
-        android:id="@+id/hdr_tbl"
+    <View
         android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_weight="1"
+        android:background="#FFFFFFFF" />
+
+    <LinearLayout
+        android:id="@+id/hdr_rw"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:shrinkColumns="0"
-        android:stretchColumns="0" >
+        android:orientation="horizontal">
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#FFFFFFFF" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/hdr_rw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/contactt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:onClick="ButtonOnClick" />
-
-                <ImageView
-                    android:id="@+id/arrowc"
-                    android:layout_width="10dp"
-                    android:layout_height="fill_parent" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/sentt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:gravity="center_horizontal"
-                    android:onClick="ButtonOnClick" />
-
-                <ImageView
-                    android:id="@+id/arrows"
-                    android:layout_width="10dp"
-                    android:layout_height="fill_parent"
-                    android:layout_marginRight="10dp"
-                    android:gravity="center_horizontal" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/recievedt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:gravity="center_horizontal"
-                    android:onClick="ButtonOnClick" />
-
-                <ImageView
-                    android:id="@+id/arrowr"
-                    android:layout_width="10dp"
-                    android:layout_height="fill_parent"
-                    android:layout_marginRight="10dp"
-                    android:gravity="center_horizontal" />
-            </LinearLayout>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#FFFFFFFF" />
-        </TableRow>
-    </TableLayout>
-
-    <ScrollView
-        android:id="@+id/ScrollView02"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" >
-
-        <TableLayout
-            android:id="@+id/val_tbl"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:shrinkColumns="0"
-            android:stretchColumns="0" >
-        </TableLayout>
-    </ScrollView>
-        <TextView
-        android:id="@+id/frm_to_err"
-        android:visibility="gone"
+            android:layout_weight="4"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/contactt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|right"
+                android:clickable="true"
+                android:onClick="ButtonOnClick" />
+
+            <ImageView
+                android:id="@+id/arrowc"
+                android:layout_width="10dp"
+                android:layout_height="fill_parent"
+                android:visibility="gone"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/sentt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:gravity="center_vertical|right"
+                android:onClick="ButtonOnClick" />
+
+            <ImageView
+                android:id="@+id/arrows"
+                android:layout_width="10dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="10dp"
+                android:visibility="gone"
+                android:gravity="center_horizontal" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/recievedt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:gravity="center_horizontal"
+                android:onClick="ButtonOnClick" />
+
+            <ImageView
+                android:id="@+id/arrowr"
+                android:layout_width="10dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="10dp"
+                android:visibility="gone"
+                android:gravity="center_horizontal" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <View
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/frm_to_err" />
+        android:layout_height="1dp"
+        android:layout_weight="1"
+        android:background="#FFFFFFFF" />
 
-
+        <include
+            layout="@layout/content_main">
+        </include>
 </LinearLayout>
