--- a/SMSTool/app/src/main/res/menu/menu_search.xml
+++ b/SMSTool/app/src/main/res/menu/menu_search.xml
@@ -10,4 +10,18 @@
         app:showAsAction="ifRoom|collapseActionView"
         android:title="@string/search"/>
 
+    <item
+        android:id="@+id/menu_name"
+        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
+        android:orderInCategory="1"
+        android:title="@string/search_hint_name"/>
+
+    <item
+        android:id="@+id/menu_phone"
+        android:orderInCategory="1"
+        android:title="@string/search_hint_phone"/>
+    <item
+        android:id="@+id/menu_compay"
+        android:orderInCategory="1"
+        android:title="@string/search_hint_compay"/>
 </menu>
