--- a/SMSTool/app/src/main/res/layout/activity_user_add.xml
+++ b/SMSTool/app/src/main/res/layout/activity_user_add.xml
@@ -123,6 +123,32 @@
             <TextView
                 android:id="@+id/tv_title_language"
                 style="@style/tv_size14_height_32"
+                android:text="@string/register" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/list_item_margin_8"
+                android:gravity="center"
+                android:orientation="vertical">
+                <Button
+                    android:id="@+id/btn_register"
+                    style="?android:attr/buttonStyleSmall"
+                    android:background="@drawable/btn_shape"
+                    android:layout_width="120dp"
+                    android:layout_height="40dp"
+                    android:onClick="ButtonOnClick"
+                    android:text="" />
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_title_language"
+                style="@style/tv_size14_height_32"
                 android:text="@string/remarks" />
 
             <com.systemteam.smstool.view.IconEditTextView
