--- a/SMSTool/app/src/main/res/layout/app_bar_main.xml
+++ b/SMSTool/app/src/main/res/layout/app_bar_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:visibility="visible"
+        android:visibility="gone"
         app:srcCompat="@drawable/ic_edit_white" />
 
 </android.support.design.widget.CoordinatorLayout>
