--- a/SMSTool/app/src/main/res/layout/activity_sms_detail.xml
+++ b/SMSTool/app/src/main/res/layout/activity_sms_detail.xml
@@ -23,14 +23,31 @@
 
         <TextView
             style="@style/tv_size14_height_32"
-            android:text="@string/register" />
-        <Button
-            android:id="@+id/btn_register"
+            android:gravity="center"
+            android:text="@string/date_choice" />
+        <ImageButton
+            android:id="@+id/ibtn_pre"
             style="?android:attr/buttonStyleSmall"
+            android:layout_marginLeft="@dimen/list_item_margin_12"
+            android:src="@drawable/btn_playback_previous"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:text="" />
+        <Button
+            android:id="@+id/btn_date"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_marginLeft="@dimen/list_item_margin_4"
             android:background="@drawable/btn_shape"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:onClick="ButtonOnClick"
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:text="" />
+        <ImageButton
+            android:id="@+id/ibtn_next"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_marginLeft="@dimen/list_item_margin_4"
+            android:src="@drawable/btn_playback_next"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
             android:text="" />
     </LinearLayout>
     <ListView
