--- a/SMSTool/app/src/main/res/layout/item_customer_list.xml
+++ b/SMSTool/app/src/main/res/layout/item_customer_list.xml
@@ -53,8 +53,8 @@
         android:id="@+id/tv_recive"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical|left"
-        android:layout_weight="2"
+        android:gravity="center"
+        android:layout_weight="3"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 
